--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_openvpn: ^0.2.0
   stop_watch_timer: ^0.7.0
   get_ip_address: ^0.0.4
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
