--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.8.1
-  flutter_openvpn: ^0.2.0
+  flutter_openvpn: ^0.1.1
   flutter_spinkit: ^4.1.2+1
   get: ^4.3.8
   get_ip_address: ^0.0.4
@@ -41,10 +41,11 @@ dependencies:
 
 dev_dependencies:
   circle_bottom_navigation: ^1.0.6
-  ff_navigation_bar: ^0.1.5
+  file_manager: ^1.0.0
   flutter_test:
     sdk: flutter
-  flutter_zoom_drawer: ^2.1.0
+  open_file: ^3.2.1
+  permission_handler: ^8.1.4+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
