--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.8.1
-  flutter_openvpn: ^0.1.1
+  flutter_openvpn: ^0.2.0
   flutter_spinkit: ^4.1.2+1
   get: ^4.3.8
   get_ip_address: ^0.0.4
@@ -41,11 +41,12 @@ dependencies:
 
 dev_dependencies:
   circle_bottom_navigation: ^1.0.6
-  file_manager: ^1.0.0
+  #  file_manager: ^1.0.0
   flutter_test:
     sdk: flutter
+  flutter_webview_plugin: ^0.4.0
   open_file: ^3.2.1
-  permission_handler: ^8.1.4+2
+  permission_handler: ^5.1.0+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,7 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/vpns/
     - assets/lottie/splash.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
