--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,15 +38,23 @@ dependencies:
   loading_animations: ^2.2.0
   lottie: ^0.7.0
   stop_watch_timer: ^0.7.0
+  sleek_circular_slider: 
+  flutter_speedometer: ^1.0.2
+  internet_speed_test: ^1.1.2+1
 
+  path_provider_ex: ^1.0.1
+  intl: ^0.16.0
+  fluttertoast: ^3.1.3
+  open_file: ^2.1.1
+  permission_handler: ^3.3.0
+  
 dev_dependencies:
   circle_bottom_navigation: ^1.0.6
   #  file_manager: ^1.0.0
   flutter_test:
     sdk: flutter
   flutter_webview_plugin: ^0.4.0
-  open_file: ^3.2.1
-  permission_handler: ^5.1.0+2
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
